# ppmm

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: publish.yml  release-checklist.yml  release.yml
packaging/aur/: PKGBUILD
packaging/deb/: control
packaging/winget/: ppmm.yaml
scripts/: build-aur.sh  build-deb.sh  build-release.sh  build-win-zip.sh  generate-winget.sh  release.sh
src/: main.rs  ppm_functions.rs  project_managers.rs  settings.rs  utils.rs
tests/: cli_tests.rs
tools/: ai_dep_manager.py
