[package]
name = "ppm"
version = "1.1.0-alpha"
edition = "2021"
authors = ["sumangal44"]
description = "PPM is a project manager for Python"
build = "build.rs"

[dependencies]
clap = { version = "3.2.8", features = ["derive"]}
colored = "2.0.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

